<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_search_root"
    style="@style/CardViewStandart"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginHorizontal="@dimen/margin_base"
    android:layout_marginVertical="@dimen/margin_half"
    app:cardElevation="@dimen/base_elevation">
...
                android:scaleType="centerCrop" />


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_title_name"
            style="@style/TextMid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_base"
            android:layout_marginTop="@dimen/margin_base"
            android:ellipsize="end"
...
