...
            android:background="@drawable/rounded"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_search"
                style="@style/BaseEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_base"
                android:layout_weight="1"
                android:hint="@string/type_anime_title"
...
